fix(css): align action icons

--- a/css/mainDist.css
+++ b/css/mainDist.css
@@ -570,6 +570,10 @@ textarea {
   font-weight: 700;
 }
 
+.icon-text {
+  align-items: center;
+}
+
 .icon-text__icon {
   margin-right: 0.3rem;
 }
